evaluation/kubernetes/apps/samples/bookinfo/_template/filter/golang-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: "golang-inbound-${app}"
spec:
  workloadSelector:
    labels:
      app: "${app}"
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: &direction SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          name: "envoy.filters.network.http_connection_manager"
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
            tracing:
              spawn_upstream_span: true
              provider:
                name: envoy.tracers.zipkin
                typed_config:
                  "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                  # is it a stable identifier generated by istio?
                  collector_cluster: outbound|9411||zipkin.prose-system.svc.cluster.local
                  collector_hostname: zipkin.prose-system.svc.cluster.local
                  collector_endpoint: "/api/v2/spans"
                  collector_endpoint_version: HTTP_JSON
                  trace_id_128bit: true
                  shared_span_context: true
                  split_spans_for_request: true
    - applyTo: HTTP_FILTER
      match:
        context: *direction
        listener:
          portNumber: 9080
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: &golang-filter-name golangfilter-inbound
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
            library_id: "${filter_name}"
            library_path: "/etc/envoy/${filter_name}.so"
            plugin_name: "${filter_name}"
            plugin_config:
              "@type": type.googleapis.com/xds.type.v3.TypedStruct
              value:
                direction: *direction
                purpose: "${app}"
                internal_cidrs:
                  - # pod range
                    10.244.0.0/16
                  - # service range
                    10.96.0.0/12
                presidio_url: "${presidio_url:=http://presidio.prose-system.svc.cluster.local:3000/batchanalyze}"
                zipkin_url: http://zipkin.prose-system.svc.cluster.local:9411/api/v2/spans
                opa_enforce: false
                opa_config: |
                  services:
                    bundle_server:
                      url:  http://prose-server.prose-system.svc.cluster.local:8080
                  bundles:
                    prose_opa_bundle:
                      service: bundle_server
                      resource: /bundles/bundle.tar.gz
                      polling:
                        min_delay_seconds: 120
                        max_delay_seconds: 3600
                  decision_logs:
                    console: true
                hardcoded_pii_types: "${hardcoded_pii_types:=false}"
    - applyTo: HTTP_FILTER
      match:
        context: *direction
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: *golang-filter-name
      patch:
        operation: INSERT_BEFORE
        value:
          name: buffer-filter
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
            max_request_bytes: 5242880
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: "golang-outbound-${app}"
spec:
  workloadSelector:
    labels:
      app: "${app}"
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: &direction SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          name: "envoy.filters.network.http_connection_manager"
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
            tracing:
              spawn_upstream_span: true
              provider:
                name: envoy.tracers.zipkin
                typed_config:
                  "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                  # is it a stable identifier generated by istio?
                  collector_cluster: outbound|9411||zipkin.prose-system.svc.cluster.local
                  collector_hostname: zipkin.prose-system.svc.cluster.local
                  collector_endpoint: "/api/v2/spans"
                  collector_endpoint_version: HTTP_JSON
                  trace_id_128bit: true
                  shared_span_context: true
                  split_spans_for_request: true
    - applyTo: HTTP_FILTER
      match:
        context: *direction
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: &golang-filter-name golangfilter-outbound
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
            library_id: "{filter_name}"
            library_path: "/etc/envoy/${filter_name}.so"
            plugin_name: "${filter_name}"
            plugin_config:
              "@type": type.googleapis.com/xds.type.v3.TypedStruct
              value:
                direction: *direction
                purpose: "${app}"
                internal_cidrs:
                  - # pod range
                    10.244.0.0/16
                  - # service range
                    10.96.0.0/12
                presidio_url: "${presidio_url:=http://presidio.prose-system.svc.cluster.local:3000/batchanalyze}"
                zipkin_url: http://zipkin.prose-system.svc.cluster.local:9411/api/v2/spans
                opa_enforce: false
                opa_config: |
                  services:
                    bundle_server:
                      url:  http://prose-server.prose-system.svc.cluster.local:8080
                  bundles:
                    prose_opa_bundle:
                      service: bundle_server
                      resource: /bundles/bundle.tar.gz
                      polling:
                        min_delay_seconds: 120
                        max_delay_seconds: 3600
                  decision_logs:
                    console: true
    - applyTo: HTTP_FILTER
      match:
        context: *direction
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: *golang-filter-name
      patch:
        operation: INSERT_BEFORE
        value:
          name: buffer-filter
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
            max_request_bytes: 5242880
